structuremap added and infrastructure changed

--- a/TestBussiness/TestBussiness.csproj
+++ b/TestBussiness/TestBussiness.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="FluentNHibernate" Version="2.1.2" />
     <PackageReference Include="Mysql.Data" Version="8.0.16" />
+    <PackageReference Include="StructureMap" Version="4.7.1" />
   </ItemGroup>
 
   <ItemGroup>
