Repository pattern refactored & IContext driven repo implemented

--- a/TestWebAPI/TestWebAPI.csproj
+++ b/TestWebAPI/TestWebAPI.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\PostDetailsController.cs" />
+    <Compile Remove="Controllers\PostsController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
