--- a/TestBussiness/TestBussiness.csproj
+++ b/TestBussiness/TestBussiness.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Context\Container.cs" />
+    <Compile Remove="Context\IContainer.cs" />
+    <Compile Remove="RepositoryService\IPostDetailRepository.cs" />
+    <Compile Remove="RepositoryService\IPostRepository.cs" />
+    <Compile Remove="Repository\PostDetailRepository.cs" />
+    <Compile Remove="Repository\PostRepository.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentNHibernate" Version="2.1.2" />
     <PackageReference Include="Mysql.Data" Version="8.0.16" />
     <PackageReference Include="StructureMap" Version="4.7.1" />
